test/pos/literals.smt2_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants
(declare-const foo Str)
(declare-const bar Str)


; Distinct Constants
(assert (distinct foo bar))


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((v1 Int)) (=> True (not (= bar foo)))))
