test/neg/literals.smt2_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants
(declare-const foo Str)
(declare-const bar Str)


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((v1 Int)) (=> True (= bar foo))))
